tests/error/type_match/base_case_tuple_mismatched_elem_type2.bz
// error: unable to match type 'i8' to 'str'
// note: while matching expression of type '[i32, f64, str, str, i8]' to '[i32, f64, str, str, str]'
function test()
{
	let _: [i32, f64, ...str] = [i32, f64, str, str, i8]();
}
